# VevaciousPlusPlus

./: .gitignore  CMakeLists.txt  README.txt  ToDoList.md
VevaciousPlusPlus/: BOL_thermal_Fittino.slha.vout  BolBounceTestInit.xml  CMakeLists.txt  Ct1BounceTestInit.xml  Ct2BounceTestInit.xml  CtDeformedTreeTest.xml  CtStraightTest.xml  CtVsMin.in  Fittino.slha.HiggsStau.BOL.vout  Fittino.slha.HiggsStau.CT.vout  Fittino.slha.HiggsStauStop.BOL.vout  Fittino.slha.HiggsStauStop.CT.vout  Makefile  MinuitDeformedTreeTest.xml  README.VevaciousPlusPlus.txt  StopVevsTest.slha  StopVevsTest.slha.vout  StopVevsTest01.slha  StopVevsTest01.slha.vout  VevaciousPlusPlusInitialization.xml  VevaciousPlusPlusMainInput.xml  VevaciousPlusPlusObjectInitialization.xml  comparison_with_without_stops.txt  obsolete_VevaciousPlusPlus_includes.txt  test.slha
VevaciousPlusPlus/ExampleSLHAFiles/: CMSSM_CCB.slha.out  NUHM1_CCB.slha.out  SPheno.spc.THDM
VevaciousPlusPlus/Examples/: VevaciousTest.slha
VevaciousPlusPlus/GAMBIT/vevacious_1_0/: abstract_VevaciousPlusPlus.hpp  wrapper_VevaciousPlusPlus_decl.hpp  wrapper_VevaciousPlusPlus_def.hpp
VevaciousPlusPlus/InitializationFiles/: BolBounceTestHiggsStop.xml  Ct1BounceTestHiggsStop.xml  Ct2BounceTestHiggsStop.xml  THDMInitialization.xml  TestHiggsStau.xml  TestHiggsStauMuSnu.xml  TestHiggsStauStop.xml  TestHiggsStop.xml  VerboselyCommentedDefaultObjectInitialization.xml  VevaciousPlusPlusDefaultObjectInitialization.xml
VevaciousPlusPlus/InitializationFiles/DefaultObjectInitializationFiles/: MinimizationStartingPointFinderInitialization.xml  PotentialFunctionInitialization.xml  PotentialMinimizerInitialization.xml  TunnelingCalculatorInitialization.xml
VevaciousPlusPlus/InitializationFiles/THDM/: PotentialFunctionInitialization.xml  PotentialMinimizerInitialization.xml
VevaciousPlusPlus/InputFiles/: SPheno.spc.THDM
VevaciousPlusPlus/ModelFiles/: ColemanBounceTest.vin  ColemanTest.slha  ColemanTest.slha.vout  CosmoTransitions_comparison.vin  CtTest.slha.vout  LimitedMssm.vin  LimitedMssmTest.vin  NewFormatRealMssmWithStauAndStopVevsPotential.vin  OneFieldTest.vin  RealMssmWithStauAndMuSnuVevs.vin  RealMssmWithStauAndStopVevs.vin  RealMssmWithStauVevs.vin  RealMssmWithStopVevs.vin  RealMssmWithStopVevsJustTree.vin  SimpleTest.vin  SingleFieldTest.vin  TestModel.vin
VevaciousPlusPlus/ModelFiles/ExampleParameterPoints/: CMSSM_CCB.slha.out  ColemanTest.slha  CtTest.slha  OldFittino.slha  OldFittino.slha.vout  SPS1a.slha  SPS1ap.slha  StopVevsTest.slha  StopVevsTest01.slha  StopVevsTest01.slha.vout  ThinWallSingleFieldTest.slha
VevaciousPlusPlus/ModelFiles/LagrangianParameters/: MssmCompatibleWithSARAHManager.xml  MssmCompatibleWithSlhaOneAndSlhaTwo.xml  MssmCompatibleWithSlhaOneAndSlhaTwoAndSarahOutputs.xml  MssmCompatibleWithSlhaOneAndSlhaTwoInternal.xml  THDM.xml
VevaciousPlusPlus/ModelFiles/PotentialFunctions/: RealMssmWithStauAndStopVevs.vin  RestrictedToRealVevsRealMssm.vin
VevaciousPlusPlus/ModelFiles/SarahExamples/: MSSM.vin  THDM.vin
VevaciousPlusPlus/Template_InitializationFiles/: THDMInitialization.xml  VevaciousPlusPlusDefaultObjectInitialization.xml
VevaciousPlusPlus/Template_InitializationFiles/DefaultObjectInitializationFiles/: PotentialFunctionInitialization.xml  PotentialMinimizerInitialization.xml
VevaciousPlusPlus/Template_InitializationFiles/THDMInitializationFiles/: PotentialFunctionInitialization.xml  PotentialMinimizerInitialization.xml
VevaciousPlusPlus/Template_inputFiles/: THDMInput.xml  VevaciousPlusPlusMainInput.xml
VevaciousPlusPlus/include/: CommonIncludes.hpp  PotentialEvaluation.hpp  PotentialMinimization.hpp  StandardIncludes.hpp  TunnelingCalculation.hpp  VersionInformation.hpp  VevaciousPlusPlus.hpp  VevaciousPlusPlus.hpp.backup.boss
VevaciousPlusPlus/include/BasicFunctions/: ParametersAndFieldsProduct.hpp  ParametersAndFieldsProductSum.hpp  PolynomialSum.hpp  PolynomialTerm.hpp  ProductOfPolynomialSums.hpp  SimplePolynomial.hpp  SumOfProductOfPolynomialSums.hpp
VevaciousPlusPlus/include/BounceActionEvaluation/: BounceActionCalculator.hpp  BouncePathFinder.hpp  BubbleProfile.hpp  BubbleRadialValueDescription.hpp  BubbleShootingOnPathInFieldSpace.hpp  BubbleShootingOnSpline.hpp  OdeintBubbleDerivatives.hpp  OdeintBubbleObserver.hpp  OneDimensionalPotentialAlongPath.hpp  SplinePotential.hpp  UndershootOvershootBubble.hpp
VevaciousPlusPlus/include/LHPC/: AsciiXmlParser.hpp  BasicObserverPattern.hpp  ParsingUtilities.hpp  RestrictedXmlParser.hpp  SimpleLhaParser.hpp  VectorUtilities.hpp
VevaciousPlusPlus/include/LagrangianParameterManagement/: LagrangianParameterManager.hpp  LesHouchesAccordBlockEntryManager.hpp  LhaInterpolatedParameterFunctionoid.hpp  LhaLinearlyInterpolatedBlockEntry.hpp  LhaPolynomialFitBlockEntry.hpp  LhaSourcedParameterFunctionoid.hpp  ParameterUpdatePropagator.hpp  RunningParameterManager.hpp  SARAHManager.hpp  SlhaBlocksWithSpecialCasesManager.hpp  SlhaCompatibleWithSarahManager.hpp  SlhaDerivedFunctionoid.hpp  SlhaInterpolatedParameterFunctionoid.hpp  SlhaInterpolatedParameterManager.hpp  SlhaLinearlyInterpolatedBlockEntry.hpp  SlhaManager.hpp  SlhaParameterInterpolator.hpp  SlhaPolynomialFitBlockEntry.hpp  SlhaSourcedParameterFunctionoid.hpp
VevaciousPlusPlus/include/MinuitWrappersAndHelpers/: MinuitHypersphereBoundAlternative.hpp  MinuitMinimum.hpp
VevaciousPlusPlus/include/PotentialEvaluation/: BinaryOperationFunctionoid.hpp  ComplexMassMatrix.hpp  ComplexMassSquaredMatrix.hpp  ConstantFunctionoid.hpp  FixedScaleOneLoopPotential.hpp  HomotopyContinuationReadyPolynomial.hpp  HomotopyContinuationReadyPotential.hpp  MassCorrectedPotential.hpp  MassSquaredMatrix.hpp  MassesSquaredCalculator.hpp  MassesSquaredCalculators.hpp  MassesSquaredFromMatrix.hpp  MassesSquaredFromPolynomials.hpp  OldMassesSquaredCalculator.hpp  ParameterFunctionoid.hpp  ParameterFunctionoids.hpp  PolynomialSum.hpp  (+18 more)
VevaciousPlusPlus/source/: BOSS_VevaciousPlusPlus.cpp  BOSS_factory_VevaciousPlusPlus.cpp  BOSS_wrapperutils.cpp  VersionInformation.cpp  VevaciousPlusPlus.cpp  VevaciousPlusPlusMain.cpp
(+509 files in other folders)
